<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textTermsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termsTitle"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textTerms1Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/terms1Titme"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textTermsTitle" />

    <TextView
        android:id="@+id/textTerms1Boby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:maxLines="5"
        android:scrollbars="vertical"
        android:text="@string/terms1Body"
        android:textSize="12sp"
        android:background="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@+id/textTerms1Title"
        />

    <Button
        android:id="@+id/agreeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="mOnClick"
        android:text="@string/agreeNgo"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorKDB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</android.support.constraint.ConstraintLayout>